refactor: streamline workflow configuration by consolidating branch definitions and adding environment variables

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,17 +2,16 @@ name: Build Windows App (Every Push)
 
 on:
   push:
-    branches:
-      - main
-      - develop
+    branches: [main, develop]
   pull_request:
-    branches:
-      - main
-      - develop
+    branches: [main, develop]
 
 jobs:
   build:
     runs-on: windows-latest
+
+    env:
+      GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
     steps:
       - name: Checkout code
